--- a/cardapioJ.html
+++ b/cardapioJ.html
@@ -49,27 +49,30 @@
                         <div class="Quente">
                             <h2>Pratos Quentes</h2>
                             <br>
-                            <p>Sopa Italiana (Minestrone)</p>
+                            <p>Sopa de Ervilha</p>
                             <!--<p>Creme de </p>-->
                             <p>Arroz</p>
-                            <p>Arroz Integral</p>
+                            <p>Batata Frita</p>
+                            <!--<p>Arroz Integral</p>-->
                             <p>Feijão</p>
-                            <p>Purê de Batata</p>
-                            <p>Frango na Chapa</p>
-                            <p>Lasanha de Presunto e Queijo</p>
+                            <!--<p>Purê de Batata</p>-->
+                            <p>Isca de Frango</p>
+                            <!--<p>Lasanha de Presunto e Queijo</p>
                             <p>Nhoque</p>
                             <p>Capeletti</p>
                             <p>Canelone</p>
                             <p>Molho Marinara</p>
-                            <p>Molho Alfredo</p>
+                            <p>Molho Alfredo</p>-->
                             <p>Pizza de Mussarela</p>
                             <p>Pizza de Calabresa</p>
+                            <p>Pizza de Atum</p>
+                            <p>Pizza Vegetariana</p>
                         </div>
                         <div class="Sobremesa">
                             <h2>Sobremesas</h2>
                             <br>
-                            <p>Sobremesa da Casa</p>
-                            <p>Tiramissu</p>
+                            <p>Pizza de Brigadeiro</p>
+                            <p>Doce Caseiro</p>
                             <p>Sobremesa Diet</p>
                             <p>Gelatina</p>
                             <p>Fruta</p>
@@ -94,24 +97,24 @@
                             <h2>Pratos Quentes</h2>
                             <br>
                             <p>Sopa de Macarrão com Legumes</p>
-                            <p>Creme de Mandioquinha com Espinafre </p>
+                            <p>Sopa de Cebola</p>
                             <p>Arroz</p>
                             <p>Arroz Integral</p>
                             <p>Feijão</p>
-                            <p>Refogado de Abobrinha</p>
-                            <p>Farofa Rica</p>
+                            <p>Farofa de Abobrinha</p>
+                            <p>Mix de Vegetais com Jiló</p>
                             <p>Batata Sauté</p>
                             <p>Mandioca Frita</p>
                             <p>Macarrão</p>
                             <p>Molho Pomodoro</p>
                             <p>Molho Branco</p>
-                            <p>Tilapia na Chapa</p>
-                            <p>Picadinho com Legumes</p>
+                            <p>Lombo Suíno com Abacaxi Grelhado</p>
+                            <p>Almondegas Molho de Tomate</p>
                         </div>
                         <div class="Sobremesa">
                             <h2>Sobremesas</h2>
                             <br>
-                            <p>Sobremesa da Casa</p>
+                            <p>Panacota</p>
                             <p>Doce Caseiro</p>
                             <p>Sobremesa Diet</p>
                             <p>Gelatina</p>
@@ -127,29 +130,29 @@
                             <h2>Saladas</h2>
                             <br>
                             <p>Mix de Folhas</p>
-                            <!--<p>Salada de Couve-Flor</p>-->
+                            <p>Salada de Couve-Flor</p>
                             <p>Salada de Brasileira</p>
-                            <p>Salada de Alho Poró</p>
+                            <p>Salada de Cenoura</p>
                             <p>Molho Parmesão</p>
                             <p>Acompanhamento: Tomate Seco</p>   
                         </div>
                         <div class="Quente">
                             <h2>Pratos Quentes</h2>
                             <br>
-                            <p>Sopa de Macarrão com Legumes</p>
-                            <!--<p>Creme de Cenoura com Gengibre</p>-->
+                            <p>Caldo Verde</p>
+                            <p>Creme de Macaxeira com Salsa e Cebola</p>
                             <p>Arroz</p>
                             <p>Arroz Integral</p>
                             <p>Feijão</p>
-                            <p>Legumes Assados</p>
-                            <p>Mandioca Frita</p>
+                            <p>Seleta de Legumes</p>
+                            <p>Batata Rústica com Alecrim</p>
+                            <p>Refogado de Carne Moída com Vagem</p>
+                            <p>Camarão Jenipapeiro</p>                            
                             <p>Nhoque</p>
-                            <p>Camarão Fortuna</p>                            
-                            <!--<p>Macarrão</p>-->
                             <p>Molho Marinara</p>
-                            <!--<p>Molho Branco</p>-->
-                            <p>Porpeta</p>
-                            <p>Coxinha da Asa</p>
+                            <p>Molho Alfredo</p>
+                            <p>Tilápia na Chapa</p>
+                            <p>Costela Bovina</p>
                         </div>
                         <div class="Sobremesa">
                             <h2>Sobremesas</h2>
@@ -172,28 +175,28 @@
                             <br>
                             <p>Mix de Folhas</p>
                             <p>Salada de Jiló</p>
+                            <p>Cuscuz Marroquino</p>
                             <p>Salada de Nabo com Cenoura</p>
-                            <!--<p>Salada de Soja</p>-->
                             <p>Molho de Tepenade de Azeitonas</p>
                             <p>Acompanhamento: Pimenta Biquinho</p>  
                         </div>
                         <div class="Quente">
                             <h2>Pratos Quentes</h2>
                             <br>
-                            <!--<p>Canja de Galinha</p>-->
-                            <p>Creme de Abobora com carne Seca</p>
+                            <p>Sopa de Feijão com Macarrão</p>
+                            <p>Creme de Palmito</p>
                             <p>Arroz</p>
                             <p>Arroz Integral</p>
                             <p>Feijão</p>
-                            <p>Mix de Legumes</p>
+                            <p>Couve-flor gratinada</p>
                             <p>Omelete</p>
-                            <p>Camarão</p>
-                            <p>Purê de Batata</p>
+                            <p>Camarão com Vegetais</p>
+                            <p>Legumes Dunas</p>
                             <p>Macarrão</p>
                             <p>Molho ao Sugo</p>
-                            <!--<p>Molho Rose</p>-->
-                            <p>Peixe Empanado</p>
-                            <p>Cupim ao Molho</p> 
+                            <p>Molho Branco</p>
+                            <p>Filé de Frango à Milanesa</p>
+                            <p>CLagarto Recheado</p> 
                         </div>
                         <div class="Sobremesa">
                             <h2>Sobremesas</h2>
@@ -215,7 +218,7 @@
                             <br>
                             <p>Mix de Folhas</p>
                             <p>Caponata de Berinjela</p>
-                            <p>Salpicão de Frango</p>
+                            <p>Salada de Lentilha</p>
                             <p>Salada de Beterraba</p>
                             <p>Molho de Ervas</p>
                             <p>Acompanhamento: Champingnon Temperado</p>    
@@ -223,25 +226,25 @@
                         <div class="Quente">
                             <h2>Pratos Quentes</h2>
                             <br>
-                            <p>Sopa de Lentilhas com Legumes</p>
-                            <p>Caldo Verde</p>
+                            <p>Canja de Galinha</p>
+                            <p>Creme de Mandioquinha</p>
                             <p>Arroz</p>
                             <p>Arroz Integral</p>
                             <p>Feijão</p>
                             <p>Feijão Tropeiro</p>
-                            <p>Mandioca Cozida</p>
-                            <p>Polenta Frita</p>
+                            <p>Banana na Chapa</p>
+                            <p>Risoto de Tomate Seco</p>
                             <p>Selete de Legumes na Manteiga</p>
-                            <p>Capeletti</p>
+                            <p>Mandioca Cozida</p>
                             <p>Molho Pomodoro</p>
-                            <p>Molho Rose</p>
-                            <p>Guisado de Frango com Quiabo</p>
-                            <p>Maminha Assada</p>   
+                            <p>Molho Branco</p>
+                            <p>Tilápia Molho de Tomate e Camarão</p>
+                            <p>Churrasquinho Misto</p>   
                         </div>
                         <div class="Sobremesa">
                             <h2>Sobremesas</h2>
                             <br>
-                            <p>Sobremesa da Casa</p>
+                            <p>Brownie</p>
                             <p>Doce Caseiro</p>
                             <p>Sobremesa Diet</p>
                             <p>Gelatina</p>
@@ -259,7 +262,7 @@
                             <p>Mix de Folhas</p>
                             <p>Salada de Arroz Negro</p>
                             <p>Salada de Chuchu</p>
-                            <p>Salada de Broto de Feijão</p>
+                            <p>Salada Coleslaw</p>
                             <p>Molho de Hortelã</p>
                             <p>Acompanhamento: Ovo de Codorna</p>    
                         </div>
@@ -272,7 +275,7 @@
                             <p>Arroz Integral</p>
                             <p>Feijão</p>
                             <p>Ratatouile</p>
-                            <p>Anéis de Cebola</p>
+                            <p>Carne Seca Acebolada</p>
                             <p>Batata Sauté</p>
                             <p>Camarão Janipapeiro</p>
                             <p>Macarrão</p>
@@ -284,7 +287,7 @@
                         <div class="Sobremesa">
                             <h2>Sobremesas</h2>
                             <br>
-                            <p>Sonho de Valsa</p>
+                            <p>Bolo de Festa</p>
                             <p>Doce Caseiro</p>
                             <p>Sobremesa Diet</p>
                             <p>Gelatina</p>
@@ -309,25 +312,24 @@
                         <div class="Quente">
                             <h2>Pratos Quentes</h2>
                             <br>
-                            <p>Sopa de Legumes</p>
-                            <p>Creme de Espinafre</p>
+                            <p>Sopa de Feijão com Rúcula e Bacon</p>
+                            <p>Creme de Abobora</p>
                             <p>Arroz</p>
                             <p>Arroz Integral</p>
                             <p>Feijão</p>
-                            <p>Mix de Vegetais com Jiló</p>
+                            <p>Hamburguer de Lentilha</p>
+                            <p>Refogado de Chuchu</p>
                             <p>Purê de Mandioquinha</p>
-                            <p>Batata Frita</p>
-                            <p>Toscana Acebolada</p>
+                            <p>Anéis de Cebola</p>
                             <p>Macarrão</p>
-                            <p>Molho de Tomate com Manjericão</p>
-                            <p>Molho Branco</p>
-                            <p>Alomondegas</p>
-                            <p>Meca na Chapa com Alcaparra e Champignon</p>   
+                            <p>Molho Pomodoro</p>
+                            <p>Maminha com molho de Cebola e Mostarda</p>
+                            <p>Peixe à Parmegiana</p>  
                         </div>
                         <div class="Sobremesa">
                             <h2>Sobremesas</h2>
                             <br>
-                            <p>Sobremesa da Casa</p>
+                            <p>Due Coalhada Fruit</p>
                             <p>Doce Caseiro</p>
                             <p>Sobremesa Diet</p>
                             <p>Gelatina</p>
