--- a/cardapioA.html
+++ b/cardapioA.html
@@ -40,9 +40,9 @@
                             <h2>Saladas</h2>
                             <br>
                             <p>Mix de Folhas</p>
-                            <p>Salada de Berinjela</p>
+                            <p>Salada de Broto de Feijão</p>
                             <p>Salada de Lentilha</p>
-                            <p>Macarronese</p>
+                            <p>Maionese</p>
                             <p>Molho de Iorgute</p>
                             <p>Acompanhamento: Tomate Seco</p>
                         </div>
@@ -53,19 +53,19 @@
                             <p>Arroz Integral</p>
                             <p>Feijão</p>
                             <p>Mix de Legumes na Manteiga</p>
-                            <p>Pirão de Peixe</p>
-                            <p>Polenta Frita</p>
-                            <p>Risoto de Palmito</p>
+                            <p>Escondidinho de Carne</p>
+                            <p>Anéis de Cebola</p>
+                            <p>Polenta Cremosa</p>
                             <p>Macarrão</p>
                             <p>Molho Pomodoro</p>
-                            <p>Molho Rose</p>
-                            <p>Pintado ao Leite de Coco e catupiry</p>
-                            <p>Maminha na Mostarda</p>                            
+                            <p>Molho Branco com Camarão</p>
+                            <p>Frango Assado</p>
+                            <p>Cupim ao Molho de Vinho</p>                            
                         </div>
                         <div class="Sobremesa">
                             <h2>Sobremesas</h2>
                             <br>
-                            <p>Sobremesa da Casa</p>
+                            <p>Banoff</p>
                             <p>Doce Caseiro</p>
                             <p>Sobremesa Diet</p>
                             <p>Gelatina</p>
@@ -82,7 +82,7 @@
                             <br>
                             <p>Mix de Folhas</p>
                             <p>Salada de Abobrinha</p>
-                            <p>Salada de Batata Doce</p>
+                            <p>Salada de Broto de Feijão</p>
                             <p>Salada de Feijão Preto</p>
                             <p>Molho: Alho</p>
                             <p>Acompanhamento: Azeitonas</p>     
@@ -93,14 +93,14 @@
                             <p>Arroz</p>
                             <p>Arroz Integral</p>
                             <p>Feijão</p>
-                            <p>Legumes</p>
-                            <p>Anéis de Cebola</p>
-                            <p>Creme de Milho</p>
-                            <p>Risoto de Tomate Seco</p>
+                            <p>Refogado de Chuchu</p>
+                            <p>Batata frita</p>
+                            <p>Couve com Farinha de Milho</p>
+                            <p>Creme de Espinafre</p>
                             <p>Macarrão</p>
                             <p>Molho ao Sugo</p>
-                            <p>Molho Parisiense</p>
-                            <p>Isca de Frango Acebolada</p>
+                            <p>Molho Branco</p>
+                            <p>Peixe Grelhado</p>
                             <p>Strogonoff de Carne</p> 
                         </div>
                         <div class="Sobremesa">
@@ -135,14 +135,14 @@
                             <p>Arroz Integral</p>
                             <p>Feijão</p>
                             <p>Repolho Refogado com Bacon</p>
-                            <p>Batata Frita</p>
-                            <p>Farofa</p>
-                            <p>Toscana Acebolada</p>
+                            <p>Purê de Batata</p>
+                            <p>Hamburgues de Lentilha</p>
+                            <p>Farofa de Ovo</p>
                             <p>Macarrão</p>
                             <p>Molho Pomodoro</p>
                             <p>Molho de Queijo</p>
-                            <p>Bife à Parmegiana</p>
-                            <p>Dobradinha</p>  
+                            <p>Goulash Alcatra</p>
+                            <p>Lombo Suíno Assado</p>  
                         </div>
                         <div class="Sobremesa">
                             <h2>Sobremesas</h2>
@@ -165,7 +165,7 @@
                             <p>Mix de Folhas</p>
                             <p>Salada de Soja</p>
                             <p>Salada de Vagem</p>
-                            <p>Salada de Rabanete</p>
+                            <p>Salada de Beterraba/p>
                             <p>Molho Italiano</p>
                             <p>Acompanhamento: Cebola Cristal</p>  
                         </div>
@@ -176,14 +176,14 @@
                             <p>Arroz Integral</p>
                             <p>Feijão</p>
                             <p>Refogado de Chuchu</p>
-                            <p>Batata Rústica com Alecrim e Alho</p>
-                            <p>Farofa de Bacon</p>
+                            <p>Calabresa Acebolada</p>
+                            <p>Lasanha</p>
                             <p>Polenta Cremosa</p>
                             <p>Macarrão</p>
-                            <p>Molho ao Sugo</p>
+                            <p>Molho de Tomate com Manjericão</p>
                             <p>Molho Rose</p>
-                            <p>Lagarto Assado</p>
-                            <p>Frango à Milanesa</p>  
+                            <p>Meca no Leite de Coco com Catupiry</p>
+                            <p>Maminha Assada</p>  
                         </div>
                         <div class="Sobremesa">
                             <h2>Sobremesas</h2>
@@ -208,7 +208,7 @@
                             <p>Salpicão de Batata com Atum</p>
                             <p>Salada de Quinoa</p>
                             <p>Molho Rose</p>
-                            <p>Acompanhamento: Tomate Cereja</p>
+                            <p>Acompanhamento: Ovos de Codorna</p>
                         </div>
                         <div class="Quente">
                             <h2>Pratos Quentes</h2>
@@ -216,20 +216,20 @@
                             <p>Arroz</p>
                             <p>Arroz Integral</p>
                             <p>Feijão</p>
-                            <p>Mix de Legumes no Azeite</p>
-                            <p>Calabresa Acebolada</p>
-                            <p>Creme de Milho</p>
+                            <p>Legumes no Vapor</p>
+                            <p>Farofa de Farinha de Milho</p>
+                            <p>Anéis de Cebola</p>
                             <p>Purê de Batata com Cenoura</p>
                             <p>Macarrão</p>
-                            <p>Molho ao Sugo</p>
-                            <p>Molho Branco</p>
-                            <p>Linguado Belle Muniere</p>
-                            <p>Cupim Assado ao Molho de Vinho</p>  
+                            <p>Molho de Tomate com Calabresa</p>
+                            <p>Molho Três Queijos</p>
+                            <p>Frango com Quiabo</p>
+                            <p>Maminha Assada com Chimichurri</p>  
                         </div>
                         <div class="Sobremesa">
                             <h2>Sobremesas</h2>
                             <br>
-                            <p>Sobremesa da Casa</p>
+                            <p>Brownie</p>
                             <p>Doce Caseiro</p>
                             <p>Sobremesa Diet</p>
                             <p>Gelatina</p>
@@ -246,7 +246,7 @@
                             <br>
                             <p>Mix de Folhas</p>
                             <p>Salada de Jiló</p>
-                            <p>Salpicão de Frango</p>
+                            <p>Salpicão de Cenoura</p>
                             <p>Salada de Feijão Branco</p>
                             <p>Molho de Mostarda</p>
                             <p>Acompanhamento: Cebolete</p>   
@@ -257,20 +257,20 @@
                             <p>Arroz</p>
                             <p>Arroz Integral</p>
                             <p>Feijão</p>
-                            <p>Legumes</p>
-                            <p>Pirão de Moqueca</p>
-                            <p>Batata Bolinha Assada</p>
+                            <p>Risoto de Palmito</p>
+                            <p>Pirão de Peixe</p>
+                            <p>Batata Assada com Tomilho</p>
                             <p>Farofa de Dendê</p>
                             <p>Macarrão</p>
-                            <p>Molho ao Marinara</p>
-                            <p>Molho Alfredo</p>
-                            <p>Moqueca de Camarão, Peixe e Banana da terra</p>
-                            <p>Contra Filé Assado</p>   
+                            <p>Molho ao Sugo</p>
+                            <p>Molho Branco</p>
+                            <p>Moqueca de Peixe, Camarão e Lula</p>
+                            <p>Maminha Molho de Ervas</p>   
                         </div>
                         <div class="Sobremesa">
                             <h2>Sobremesas</h2>
                             <br>
-                            <p>Mousse de Maracujá</p>
+                            <p>Queijadinha</p>
                             <p>Doce Caseiro</p>
                             <p>Sobremesa Diet</p>
                             <p>Gelatina</p>
@@ -296,23 +296,22 @@
                             <h2>Pratos Quentes</h2>
                             <br>
                             <p>Arroz / Arroz Integral</p>
-                            <!--<p>Arroz Integral</p>-->
+                            <p>Arroz Integral</p>
                             <p>Feijão</p>
                             <p>Couve Refogada</p>
-                            <p>Batata Frita</p>
                             <p>Farofa</p>
                             <p>Torresmo</p>
                             <p>Banana Empanada</p>
                             <p>Macarrão</p>
                             <p>Molho ao Sugo</p>
                             <p>Molho Parisiense</p>
-                            <p>Coxinha da Asa</p>
+                            <p>Peito de Frango na Chapa</p>
                             <p>Feijoada</p>  
                         </div>
                         <div class="Sobremesa">
                             <h2>Sobremesas</h2>
                             <br>
-                            <p>Sobremesa da Casa</p>
+                            <p>Pudim</p>
                             <p>Doce Caseiro</p>
                             <p>Sobremesa Diet</p>
                             <p>Gelatina</p>
