--- a/fotos.html
+++ b/fotos.html
@@ -20,8 +20,8 @@
                 <li class="navbar-list-li"><a href="./index.html">Inicio</a></li>
                 <li class="navbar-list-li"><a href="./cineAFPESP.html">Cine AFPESP</a></li>
                 <li class="navbar-list-li"><a href="./eventos.html">Eventos</a></li>
-           <!-- <li class="navbar-list-li"><a href="./cardapioA.html">Cardápio Almoço</a></li>
-                <li class="navbar-list-li"><a href="./cardapioJ.html">Cardápio Jantar</a></li>-->
+                <li class="navbar-list-li"><a href="./cardapioA.html">Cardápio Almoço</a></li>
+                <li class="navbar-list-li"><a href="./cardapioJ.html">Cardápio Jantar</a></li>
                 <li class="navbar-list-li"><a href="./fotos.html">Fotos</a></li>
                 <li class="navbar-list-li"><a href="./cidade.html">Cidade</a></li>
                 <!-- <li><a href="./sobre.html">Sobre</a></li>
