--- a/cardapioA.html
+++ b/cardapioA.html
@@ -18,7 +18,7 @@
             <nav class="navbar-principal">
                 <ul class="navbar-list">
                     <li class="navbar-list-li"><a href="./index.html">Inicio</a></li>
-                    <--<li class="navbar-list-li"><a href="./cineAFPESP.html">Cine AFPESP</a></li>
+                    <!--<li class="navbar-list-li"><a href="./cineAFPESP.html">Cine AFPESP</a></li>
                     <li class="navbar-list-li"><a href="./eventos.html">Eventos</a></li>-->
                     <li class="navbar-list-li"><a href="./cardapioA.html">Cardápio Almoço</a></li>
                     <li class="navbar-list-li"><a href="./cardapioJ.html">Cardápio Jantar</a></li>
