--- a/formulario.html
+++ b/formulario.html
@@ -8,7 +8,7 @@
     <title>Cardapio</title>
 </head>
     <body>    
-        <form class="pform" action="cardapioPHP.php" method="POST">  
+        <form class="pform" action="cardapio.html" method="POST">  
             <div class="principal">
                 <input type="text" value="Almoço/Jantar" id="p25" name="p25">
                 <div class="saladas">
