--- a/cineAFPESP.html
+++ b/cineAFPESP.html
@@ -20,9 +20,9 @@
                     <li class="navbar-list-li"><a href="./index.html">Inicio</a></li>
                     <!--<li class="navbar-list-li"><a href="./cineAFPESP.html">Cine AFPESP</a></li>
                     <li class="navbar-list-li"><a href="./eventos.html">Eventos</a></li>-->
-                    <li class="navbar-list-li"><a href="./cardapioA.html">Cardápio Almoço</a></li>
-                    <li class="navbar-list-li"><a href="./cardapioJ.html">Cardápio Jantar</a></li>
-                    <li class="navbar-list-li"><a href="./fotos.html">Fotos</a></li>
+                    <li class="navbar-list-li"><a href="https://kimdb.000webhostapp.com/listarcardapios.php">Listar Cardapios</a></li>
+                    <li class="navbar-list-li"><a href="https://kimdb.000webhostapp.com/formulario.php">Formulario</a></li>
+                    <li class="navbar-list-li"><a href="https://kimdb.000webhostapp.com/cardapiodoDia.php">Cardapio do Dia</a></li>
                     <li class="navbar-list-li"><a href="./cidade.html">Cidade</a></li>
                     <!-- <li><a href="./sobre.html">Sobre</a></li>
                     <li><a href="./contato.html">Contato</a></li>-->
