--- a/fotos.html
+++ b/fotos.html
@@ -17,14 +17,15 @@
         <label for="menu" class="navbar-menu"><img class="btn-menu" src="img/menubar.png" alt=""></label>
         <nav class="navbar-principal">
             <ul class="navbar-list">
-               <li class="navbar-list-li"><a href="./index.html">Inicio</a></li>
-                <!--<li class="navbar-list-li"><a href="./cineAFPESP.html">Cine AFPESP</a></li>
-                <li class="navbar-list-li"><a href="./eventos.html">Eventos</a></li>-->
-                <li class="navbar-list-li"><a href="https://kimdb.000webhostapp.com/cardapiodoAlmoco.php">Cardápio Almoço</a></li>
-                <li class="navbar-list-li"><a href="https://kimdb.000webhostapp.com/cardapiodoJantar.php">Cardápio Jantar</a></li>
+                <li class="navbar-list-li"><a href="./index.html">Inicio</a></li>
                 <li class="navbar-list-li"><a href="./fotos.html">Fotos</a></li>
                 <li class="navbar-list-li"><a href="./cidade.html">Cidade</a></li>
-                <!-- <li><a href="./sobre.html">Sobre</a></li>
+                <li class="navbar-list-li"><a href="https://kimdb.000webhostapp.com/cardapiodoAlmoco.php">Cardápio Almoço</a></li>
+                <li class="navbar-list-li"><a href="https://kimdb.000webhostapp.com/cardapiodoJantar.php">Cardápio Jantar</a></li>
+                <span>(Obs: Cardapio pode não abrir em 3G/4G da Operadora Vivo)</span>                
+                <!--<li class="navbar-list-li"><a href="./cineAFPESP.html">Cine AFPESP</a></li>
+                <li class="navbar-list-li"><a href="./eventos.html">Eventos</a></li>
+                <li><a href="./sobre.html">Sobre</a></li>
                 <li><a href="./contato.html">Contato</a></li>-->
             </ul>
         </nav>
