--- a/fotos.html
+++ b/fotos.html
@@ -22,7 +22,7 @@
                 <li class="navbar-list-li"><a href="./cidade.html">Cidade</a></li>
                 <li class="navbar-list-li"><a href="https://kimdb.000webhostapp.com/cardapiodoAlmoco.php">Cardápio Almoço</a></li>
                 <li class="navbar-list-li"><a href="https://kimdb.000webhostapp.com/cardapiodoJantar.php">Cardápio Jantar</a></li>
-                <span>(Obs: Cardapio pode não abrir em 3G/4G da Operadora Vivo)</span>                
+                <span>(Obs: O Cardápio não abre em Conexão 3G/4G da Operadora Vivo.)</span>               
                 <!--<li class="navbar-list-li"><a href="./cineAFPESP.html">Cine AFPESP</a></li>
                 <li class="navbar-list-li"><a href="./eventos.html">Eventos</a></li>
                 <li><a href="./sobre.html">Sobre</a></li>
