--- a/AdmKim.html
+++ b/AdmKim.html
@@ -3,25 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="css/AdmKim.css">
+    <link rel="stylesheet" href="css/cssResp.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Os Colaboradores AFPESP Peruíbe II</title>
 </head>
-<body>
-    <header class="header-principal" >        
-        <a href="./index.html"><img class="logoColaboradores" src="img/colaboradores.png" alt="Colaboradores" ></a>
-        <h2 class="titulo">Colaboradores AFPESP</h2>       
-    </header>    
-    <div class="lista">
-        <ul>
-            <li><a href="https://kimdb.000webhostapp.com/formulario.php">Novo Cardápio</a></li>
-            <li><a href="https://kimdb.000webhostapp.com/listarcardapios.php">Lista de Cardápios</a></li>
-            <li><a href="https://kimdb.000webhostapp.com/cardapiodoAlmoco.php">Cardápio do Dia: Almoço</a></li>
-            <li><a href="https://kimdb.000webhostapp.com/cardapiodoJantar.php">Cardápio do Dia: Jantar</a></li>
-        </ul>
-    </div>
-    <footer>
-        <p>Desenvolvido por <b>Aderaldo Anderson S.V Amorim</b></p>
-    </footer>
-</body>
+    <body>
+        <header class="header-principal" >
+            <div class="logo">       
+                <a href="./index.html"><img class="logoColaboradores" src="img/colaboradores.png" alt="Colaboradores" ></a>
+            </div>
+            <div class="titulo">
+                <h2>Colaboradores AFPESP</h2>
+            </div>  
+        </header>
+        <div class="container">
+            <div class="lista">
+                <ul>
+                    <li><a href="https://kimdb.000webhostapp.com/formulario.php">Novo Cardápio</a></li>
+                    <li><a href="https://kimdb.000webhostapp.com/listarcardapios.php">Lista de Cardápios</a></li>
+                    <li><a href="https://kimdb.000webhostapp.com/cardapiodoAlmoco.php">Cardápio do Dia: Almoço</a></li>
+                    <li><a href="https://kimdb.000webhostapp.com/cardapiodoJantar.php">Cardápio do Dia: Jantar</a></li>
+                </ul>
+            </div>
+        </div>
+        <footer>
+            <p>Desenvolvido por <b>Aderaldo Anderson S.V Amorim</b></p>
+        </footer>
+    </body>
 </html>
