--- a/AdmKim.html
+++ b/AdmKim.html
@@ -19,10 +19,7 @@
         <div class="container">
             <div class="lista">
                 <ul>
-                    <li><a href="https://kimdb.000webhostapp.com/formulario.php">Novo Cardápio</a></li>
-                    <li><a href="https://kimdb.000webhostapp.com/listarcardapios.php">Lista de Cardápios</a></li>
-                    <li><a href="https://kimdb.000webhostapp.com/cardapiodoAlmoco.php">Cardápio do Dia: Almoço</a></li>
-                    <li><a href="https://kimdb.000webhostapp.com/cardapiodoJantar.php">Cardápio do Dia: Jantar</a></li>
+                    <li><a href="http://colaboradoresafpesp.epizy.com/">Gerenciar</a></li>
                 </ul>
             </div>
         </div>
